tests/snapshots/test_runner__tests__compiler__typecheck__type_annotation_let_statement_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x: String = 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_let_statement_1.kk:1:17
  │
1 │ let x: String = 2
  │                 ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Number    |
    +---------------+-------------+
