tests/snapshots/test_runner__tests__compiler__typecheck__type_annotation_string_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let a: String = "hi"
let b: String = 'h'

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_string_1.kk:2:17
  │
2 │ let b: String = 'h'
  │                 ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Character |
    +---------------+-------------+
