tests/snapshots/test_runner__tests__compiler__typecheck__unify_function_branches_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Bool = True() False()
enum Bomb = Bomb()
let and: | Bool Bool -> Bool =
  | True() Bomb() => True

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unify_function_branches_2.kk:4:12
  │
4 │   | True() Bomb() => True
  │            ^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Bool        | + Bomb      |
    +---------------+-------------+
