tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_enum_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Option<T> = #some(T) | #none

let foo (o: Option<Int>): Option<String> =
  {
    \#some(1) -> #some("hi")
    \#some(_) -> #some("lol")
    \#some(_) -> #none // This case is unreachable
    \#none    -> #none
  } (o)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_enum_1.kk:7:6
  │
7 │     \#some(_) -> #none // This case is unreachable
  │      ^^^^^^^ Unreachable case
  │
  = This case is unreachable as it is already handled by previous cases.
